# Graph-Laplacian

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
doc/: requirements.md  test_plan.md
header/: graph_laplacian.hpp
src/: CMakeLists.txt  graph_laplace.cpp  graph_laplace.hpp  graph_laplacian.cpp  graph_laplacian.hpp
tests/: CMakeLists.txt  test_graph_laplace.cpp  test_graph_laplacian.cpp
